--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,6 +28,10 @@
         <li><a href="/scenario-1">Scenario one</a></li>
       </ul>
 
+      <ul>
+        <li><a href="/scenario-previous-questions">Load saved questions</a></li>
+      </ul>
+
 
       <br>
 
