first stab at first tab of monitoring

--- a/app/views/includes/live-events.html
+++ b/app/views/includes/live-events.html
@@ -7,7 +7,7 @@
     <table style="margin-top: 0px;">
       <thead>
       <tr>
-        <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="#">Monitor event</a></td>
+        <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="/monitor/live-present">Monitor event</a></td>
         <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="/preview-data/{{itemRow}}/true">View event page</a></td>
         <td valign="top" style="width:40%; border: 0px; padding-right: 0px; padding-top: 2px; padding-bottom: 0px;">
           <details style="display:inline;">
