--- a/app/views/create-event/tickets.html
+++ b/app/views/create-event/tickets.html
@@ -108,7 +108,7 @@
 
 		  <div class="form-group" style="margin-top:0px">
 			  <input type="submit" class="button" value="Save and continue">
-			  <!-- <p style="margin-top:30px"><a href="/create-event/summary">There is no limit</a></p>  -->
+			  <p style="margin-top:25px"><a href="/create-event/attendees">I'll complete this later - I don't have this information yet</a></p>
 		  </div>
 
 
