--- a/app/views/create-event/images.html
+++ b/app/views/create-event/images.html
@@ -101,6 +101,7 @@
 
 		  <div class="form-group" style="margin-top:20px">
 			  <input type="submit" class="button" value="Save and continue">
+			  <p style="margin-top:25px"><a href="/create-event/tickets">I'll complete this later - I don't have this information yet</a></p>
 		  </div>
 
 	  </form>
