--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -76,7 +76,7 @@
 
 		  <div class="form-group" style="margin-top:20px">
 			  <input type="submit" class="button" value="Save and continue">
-			  <p style="margin-top:30px"><a href="/create-event/venue-onwards">I don't know the venue</a></p>
+			  <p style="margin-top:25px"><a href="/create-event/venue-onwards">I'll complete this later - I don't have this information yet</a></p>
 
 			  <p id="enter-new-address" style="display:none">
 
