Many updates to the monitoring pages

--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -50,6 +50,7 @@
 			  <li>full name</li>
 			  <li>full address and postcode</li>
 			  <li>phone number</li>
+			  <li>email address</li>
 			  <li>company name</li>
 			  <li>primary sector of company</li>
 			  <li>job title</li>
@@ -61,18 +62,18 @@
 
 
 
-		  <fieldset class="form-group inline">
+		  <fieldset class="form-group inline" style="margin-bottom:15px">
 				  <!--  Addtional questions that the registering user need to answer  -->
 				  <div class="form-group" style="margin-top:0px; margin-bottom:0px">
-					  <label class="form-label-bold">
+					  <label class="form-label-bold" style="margin-bottom:10px">
 						  Do you need to collect any other details?
 					  </label>
 					  <div class="form-date" style="margin-top:5px">
-						  <div class="multiple-choice">
+						  <div class="multiple-choice" style="margin-bottom:10px">
 							  <input id="radio-inline-2" type="radio" name="radio-additional-questions-boolean" value="no" checked="checked">
 							  <label for="radio-inline-2">No, I don't need to add any further registration questions</label>
 						  </div>
-						  <div class="multiple-choice">
+						  <div class="multiple-choice" style="margin-bottom:10px">
 							  <input id="radio-inline-1" type="radio" name="radio-additional-questions-boolean" value="yes">
 							  <label for="radio-inline-1">Yes, I need to add further registration questions</label>
 						  </div>
@@ -82,8 +83,7 @@
 		  </fieldset>
 
 
-
-		  <div class="form-group" style="margin-top:20px">
+ 		  <div class="form-group" style="margin-top:20px">
 			  <input type="submit" class="button" value="Save and continue">
 			  <!-- <p style="margin-top:30px"><a href="/create-event/summary">There is no limit</a></p>  -->
 		  </div>
