--- a/app/views/create-event/index.html
+++ b/app/views/create-event/index.html
@@ -236,7 +236,7 @@
 
 		  <div class="form-group" style="margin-top:5px">
 			  <input type="submit" class="button" value="Save and continue">
-			  <p style="margin-top:25px"><a href="/create-event/create-event-onwards">I'll complete this later - I don't have this information yet</a></p>
+			  <p style="margin-top:25px"><a href="/create-event/venue">I'll complete this later - I don't have this information yet</a></p>
 		  </div>
 
 	  </form>
