--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -35,13 +35,14 @@ GOV.UK prototype kit
               <li><a class="stats" href="#stats" style="text-decoration: none;">Statistics</a></li>
               <li><a class="track-links" href="#track-links" style="text-decoration: none;">Tracking links</a></li>
               <li><a class="reg-people" href="#reg-people" style="text-decoration: none;">Registered people</a></li>
+              <li><a class="checkin" href="#checkin" style="text-decoration: none;">Check-in</a></li>
             </ul>
           </div>
 
 
           <div class="tabs-content">
 
-            <!-- Live -->
+            <!-- Stats -->
             <div class="tabs-panel" id="stats" >
               <div class="tabs-panel-inner">
 
@@ -50,16 +51,16 @@ GOV.UK prototype kit
 
                 <div id=top-row" display="flex" style="margin-bottom:30px">
                   <div style="float:left; width:41%;">
-                    <p><span class="heading-xlarge">78%</span> of tickets sold</p>
+                    <p><span class="heading-xlarge">83%</span> of tickets sold</p>
                   </div>
                   <div style="float:left; width:31%; margin-top:8px;" display="flex">
                     <div>
-                      <p><span class="heading-large">5</span> tickets remaining</p>
+                      <p><span class="heading-large">12</span> tickets remaining</p>
                     </div>
                   </div>
                   <div style="float:right; width:28%;  margin-top:8px;">
-                    <div style="float:right;">
-                      <p style="margin-bottom:0px"><span class="heading-large">100</span> tickets total</p>
+                    <div style="margin-left:40px">
+                      <p style="margin-bottom:0px"><span class="heading-large">70</span> tickets total</p>
                       <p style="margin-top:0px"><a href="#">Change amount of tickets</a></p>
                     </div>
                   </div>
@@ -73,62 +74,65 @@ GOV.UK prototype kit
                 <div id=middle-row" display="flex">
                   <div style="float:left; width:41%; ">
                     <div style="width:74%">
+
                       <p style="margin-bottom:5px">Event page visits</p>
                       <p class="heading-xlarge" style="margin-top:0px; margin-bottom:30px;">248</p>
 
                       <p class="heading-small" style="margin-bottom:0px;">Email marketing</p>
                       <div style="width:100%;" display="flex">
-                        <div style="float:left; width:60%; background-color:#0000FF; height:10px;  margin-top:6px;">&nbsp;</div>
+                        <div style="float:left; width:60%; background-color:#005EA5; height:10px;  margin-top:6px;">&nbsp;</div>
                         <div style="float:left; width:40px; height:10px;">&nbsp;60%</div>
                       </div>
 
                       <p class="heading-small"  style="margin-top:35px; margin-bottom:0px;">Twitter</p>
                       <div style="width:100%;" display="flex">
-                        <div style="float:left; width:30%; background-color:#00FF00; height:10px;  margin-top:6px;">&nbsp;</div>
+                        <div style="float:left; width:30%; background-color:#006435; height:10px;  margin-top:6px;">&nbsp;</div>
                         <div style="float:left; width:40px; height:10px;">&nbsp;30%</div>
                       </div>
 
-                      <p class="heading-small"  style="margin-top:35px; margin-bottom:0px;">Partnert</p>
+                      <p class="heading-small"  style="margin-top:35px; margin-bottom:0px;">Partner</p>
                       <div style="width:100%;" display="flex">
-                        <div style="float:left; width:9%; background-color:#FF0000; height:10px;  margin-top:6px;">&nbsp;</div>
+                        <div style="float:left; width:9%; background-color:#DF3034; height:10px;  margin-top:6px;">&nbsp;</div>
                         <div style="float:left; width:40px; height:10px;">&nbsp;9%</div>
                       </div>
 
                       <p class="heading-small"  style="margin-top:35px; margin-bottom:0px;">Other</p>
                       <div style="width:100%;" display="flex">
-                        <div style="float:left; width:1%; background-color:#000000; height:10px;  margin-top:6px;">&nbsp;</div>
+                        <div style="float:left; width:1%; background-color:#2E358B; height:10px;  margin-top:6px;">&nbsp;</div>
                         <div style="float:left; width:40px; height:10px;">&nbsp;1%</div>
                       </div>
+
                     </div>
                   </div>
 
 
                   <div style="float:left; width:31%; margin-top:0px;" display="flex">
                     <div>
+
                       <p style="margin-bottom:5px">Registrations</p>
-                      <p class="heading-xlarge" style="margin-top:0px; margin-bottom:30px;">95</p>
+                      <p class="heading-xlarge" style="margin-top:0px; margin-bottom:30px;">58</p>
 
                         <p class="heading-small" style="margin-bottom:0px;">Email marketing</p>
                         <div style="width:100%;" display="flex">
-                          <div style="float:left; width:48%; background-color:#0000FF; height:10px;  margin-top:6px;">&nbsp;</div>
+                          <div style="float:left; width:48%; background-color:#005EA5; height:10px;  margin-top:6px;">&nbsp;</div>
                           <div style="float:left; width:40px; height:10px;">&nbsp;48%</div>
                         </div>
 
                         <p class="heading-small"  style="margin-top:35px; margin-bottom:0px;">Twitter</p>
                         <div style="width:100%;" display="flex">
-                          <div style="float:left; width:50%; background-color:#00FF00; height:10px;  margin-top:6px;">&nbsp;</div>
+                          <div style="float:left; width:50%; background-color:#006435; height:10px;  margin-top:6px;">&nbsp;</div>
                           <div style="float:left; width:40px; height:10px;">&nbsp;50%</div>
                         </div>
 
-                        <p class="heading-small"  style="margin-top:35px; margin-bottom:0px;">Partnert</p>
+                        <p class="heading-small"  style="margin-top:35px; margin-bottom:0px;">Partner</p>
                         <div style="width:100%;" display="flex">
-                          <div style="float:left; width:2%; background-color:#FF0000; height:10px;  margin-top:6px;">&nbsp;</div>
+                          <div style="float:left; width:2%; background-color:#DF3034; height:10px;  margin-top:6px;">&nbsp;</div>
                           <div style="float:left; width:40px; height:10px;">&nbsp;2%</div>
                         </div>
 
                         <p class="heading-small"  style="margin-top:35px; margin-bottom:0px;">Other</p>
                         <div style="width:100%;" display="flex">
-                          <div style="float:left; width:0%; background-color:#000000; height:10px;  margin-top:6px;">&nbsp;</div>
+                          <div style="float:left; width:0%; background-color:#2E358B; height:10px;  margin-top:6px;">&nbsp;</div>
                           <div style="float:left; width:40px; height:10px;">0%</div>
                         </div>
 
@@ -136,24 +140,107 @@ GOV.UK prototype kit
                     </div>
 
 
-                  </div>
+                  <!--  Registrations  -->
                   <div style="float:right; width:28%;  margin-top:8px;">
-                    <div style="float:right;">
+                    <div style="margin-left:40px">
+                      <p style="margin-bottom:5px">Check-in attendees</p>
+                      <p class="heading-xlarge" style="margin-top:0px; margin-bottom:30px;">0</p>
                     </div>
                   </div>
+
                 </div>
 
               </div>
             </div>
 
-            <!--  Draft   -->
-            <div class="tabs-panel" id="reg-people" style="border-top:0px solid #bfc1c3;">
+
+
+
+            <!--  Tracking links for reg  -->
+            <div class="tabs-panel" id="track-links" >
               <div class="tabs-panel-inner">
+
+
+
+                <table style="width:100%; margin-top:20px">
+                  <!--
+                  <tr>
+                    <th>Firstname</th>
+                    <th>Lastname</th>
+                    <th>Age</th>
+                  </tr>
+                  -->
+                  <tr>
+                    <td style="font-weight:700; width:30%; padding-top:25px; padding-bottom:20px;";>Email marketing</td>
+                    <td style="padding-top:25px; padding-bottom:20px;">www.great.gov.uk/event/mh43dzsh</td>
+                    <td style="padding-top:15px; padding-bottom:15px;" >
+                      <div>
+                        <input style="float:right;" type="submit" class="button-secondary" formaction="/monitor/live-present#track-links" value="Copy to clipboard">
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="font-weight:700; width:30%; padding-top:25px; padding-bottom:20px;";>Twitter</td>
+                    <td style="padding-top:25px; padding-bottom:20px;">www.great.gov.uk/event/dt74stad</td>
+                    <td style="padding-top:15px; padding-bottom:15px;" >
+                      <div>
+                        <input style="float:right;" type="submit" class="button-secondary" formaction="/monitor/live-present#track-links" value="Copy to clipboard">
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="font-weight:700; width:30%; padding-top:25px; padding-bottom:20px;";>Partner</td>
+                    <td style="padding-top:25px; padding-bottom:20px;">www.great.gov.uk/event/5gufetui</td>
+                    <td style="padding-top:15px; padding-bottom:15px;" >
+                      <div>
+                        <input style="float:right;" type="submit" class="button-secondary" formaction="/monitor/live-present#track-links" value="Copy to clipboard">
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="font-weight:700; width:30%; padding-top:25px; padding-bottom:20px;";>Other</td>
+                    <td style="padding-top:25px; padding-bottom:20px;">www.great.gov.uk/event/loh3infz</td>
+                    <td style="padding-top:15px; padding-bottom:15px;" >
+                      <div>
+                        <input style="float:right;" type="submit" class="button-secondary" formaction="/monitor/live-present#track-links" value="Copy to clipboard">
+                      </div>
+                    </td>
+                  </tr>
+                </table>
+
+                <div style="margin-top: 30px; margin-bottom: 30px;">
+                  <input type="submit" class="button-secondary" formaction="#" value="Add new link">
+                </div>
 
               </div>
             </div>
 
 
+
+            <!--  Regristrared people  -->
+            <div class="tabs-panel" id="reg-people" >
+              <div class="tabs-panel-inner">
+
+                <div style="margin-top: 30px; margin-bottom: 30px;">
+                  <input type="submit" class="button-secondary" formaction="/monitor/live-present?#reg-people" value="Download this data">
+                </div>
+
+                {% include "includes/registered-people-list.html" %}
+
+              </div>
+            </div>
+
+
+
+
+            <!--  Checking  -->
+            <div class="tabs-panel" id="checkin" >
+              <div class="tabs-panel-inner">
+
+                {% include "includes/checkin-list.html" %}
+
+              </div>
+            </div>
 
           </div>
 
