hash key fix for loading specific tab

--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -105,9 +105,8 @@
 
 
 
-
-
-
+{% endblock %}
+{% block page_scripts %}
 <script>
 
 	$(document).ready(function() {
@@ -121,4 +120,3 @@
 
 </script>
 {% endblock %}
-
