--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -160,77 +160,7 @@ GOV.UK prototype kit
             <div class="tabs-panel" id="track-links" >
               <div class="tabs-panel-inner">
 
-
-
-                <table style="width:100%; margin-top:20px">
-                  <!--
-                  <tr>
-                    <th>Firstname</th>
-                    <th>Lastname</th>
-                    <th>Age</th>
-                  </tr>
-                  -->
-                  <tr>
-                    <td style="font-weight:700; width:30%; padding-top:25px; padding-bottom:20px;";>Email marketing</td>
-                    <td style="padding-top:25px; padding-bottom:20px;">www.great.gov.uk/event/mh43dzsh</td>
-                    <td style="padding-top:15px; padding-bottom:15px;" >
-                      <div>
-                        <input style="float:right;" type="submit" class="button-secondary" formaction="#" value="Copy to clipboard">
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td style="font-weight:700; width:30%; padding-top:25px; padding-bottom:20px;";>Twitter</td>
-                    <td style="padding-top:25px; padding-bottom:20px;">www.great.gov.uk/event/dt74stad</td>
-                    <td style="padding-top:15px; padding-bottom:15px;" >
-                      <div>
-                        <input style="float:right;" type="submit" class="button-secondary" formaction="#" value="Copy to clipboard">
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td style="font-weight:700; width:30%; padding-top:25px; padding-bottom:20px;";>Partner</td>
-                    <td style="padding-top:25px; padding-bottom:20px;">www.great.gov.uk/event/5gufetui</td>
-                    <td style="padding-top:15px; padding-bottom:15px;" >
-                      <div>
-                        <input style="float:right;" type="submit" class="button-secondary" formaction="#" value="Copy to clipboard">
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td style="font-weight:700; width:30%; padding-top:25px; padding-bottom:20px;";>Other</td>
-                    <td style="padding-top:25px; padding-bottom:20px;">www.great.gov.uk/event/loh3infz</td>
-                    <td style="padding-top:15px; padding-bottom:15px;" >
-                      <div>
-                        <input style="float:right;" type="submit" class="button-secondary" formaction="#" value="Copy to clipboard">
-                      </div>
-                    </td>
-                  </tr>
-
-
-                  <!-- Add new  tracking link -->
-                  <tr>
-                    <td style="font-weight:700; width:30%; padding-top:25px; padding-bottom:20px;";>
-
-                      {% if errorTrackingName %}
-                        <p class="error-message">
-							  Please enter the name of the ...
-						  </p>
-                      {% endif %}
-
-                      <input type="text" class="form-control  {% if errorTrackingName %} form-control-error {% endif %}"
-                             id="new-link-name" name="new-link-name" value="" style="width:80%">
-                    </td>
-                    <td style="padding-top:20px; padding-bottom:20px;">
-                      <div style="margin-top: 0px; margin-bottom: 0px;">
-                        <input type="submit" class="button-secondary" formaction="/monitor/add-tracking-link" value="Add new link">
-                      </div>
-                    </td>
-                    <td style="padding-top:15px; padding-bottom:15px;" >
-                    </td>
-                  </tr>
-
-                </table>
+                {% include "includes/tracking-links.html" %}
 
               </div>
             </div>
@@ -284,7 +214,10 @@ GOV.UK prototype kit
 
 
 
+{% endblock %}
 
+
+{% block page_scripts %}
 <script>
 
   $(document).ready(function() {
