added logout link to logged in pages

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -45,3 +45,7 @@ $path: "/public/images/";
 
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
+
+#proposition-links {
+  float: right;
+} 
